# TradingBot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conn_log.txt  debug_log.txt  debug_log_fixed.txt  debug_log_fixed_v2.txt  pyproject.toml  render.yaml  requirements.txt  ruff_errors.txt  run_log.txt  simulation_results.txt  simulation_results_fixed.txt  test_projectx_connection.py  test_results.txt
.agent/skills/tsxbot-level-intelligence/: SKILL.md
.agent/skills/tsxbot-research-method/: SKILL.md
.agent/skills/tsxbot-signal-packet-standard/: SKILL.md
.agent/workflows/: plan-review.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
config/: alerts.yaml  config.example.yaml  config.yaml
data/: README.md  learned_parameters.yaml  parameter_history.json
data/historical/: ES_1min_0bars_databento.csv  ES_1min_25350bars.csv  ES_1min_35579bars_databento.csv  ES_1min_8970bars.csv
docs/: 00_CODEBASE_MAP.md  01_ARCHITECTURE.md  02_RUNBOOKS.md  03_AGENT_PLAYBOOK.md  05_SETUP_GUIDE.md  06_STRATEGY_LOGIC.md
docs/04_DECISIONS/: ADR-0001-compound-engineering.md
reports/: backtest_BOSPullbackStrategy_20260115_002846.html  backtest_EMACloudStrategy_20260115_022023.html  backtest_MeanReversionStrategy_20260115_002827.html  backtest_MeanReversionStrategy_20260115_022006.html  backtest_ORBStrategy_20260113_152110.html  backtest_ORBStrategy_20260113_153352.html  backtest_ORBStrategy_20260113_153540.html  backtest_ORBStrategy_20260114_200611.html  backtest_ORBStrategy_20260115_002412.html  backtest_ORBStrategy_20260115_004319.html  backtest_ORBStrategy_20260115_004408.html  backtest_ORBStrategy_20260115_012247.html  backtest_ORBStrategy_20260115_013952.html  backtest_SweepReclaimStrategy_20260115_002839.html  backtest_VWAPBounceStrategy_20260115_002813.html  backtest_VWAPBounceStrategy_20260115_015053.html  backtest_VWAPBounceStrategy_20260115_115246.html
scripts/: monte_carlo_sim.py  validate.ps1
src/tsxbot/: __init__.py  __main__.py  app.py  cli.py  config_loader.py  constants.py
src/tsxbot/ai/: __init__.py  advisor.py  models.py  performance_tracker.py  prompts.py  recommender.py  strategy_selector.py
src/tsxbot/backtest/: __init__.py  data_loader.py  engine.py  report.py  results.py
src/tsxbot/broker/: __init__.py  base.py  fills.py  models.py  orders.py  projectx.py  projectx_broker.py  sim.py  sim_broker.py
src/tsxbot/data/: __init__.py  bars.py  databento_fetcher.py  features.py  historical_fetcher.py  history_loader.py  indicators.py  market_data.py  sim_feed.py  tick_archiver.py
src/tsxbot/db/: __init__.py  supabase_client.py
tests/: test_ai_advisor.py  test_config_loader.py  test_daily_runner.py  test_ema_cloud.py  test_execution_engine.py  test_executor_brackets.py  test_journaler.py  test_level_intelligence.py  test_notification_logic.py  test_orb_strategy.py  test_projectx_broker.py  test_risk_governor.py  test_safety_fixes.py  test_session_manager.py  test_sim_broker.py
tests/integration/: test_risk_scenarios.py
tools/: verify_stream.py
(+51 files in other folders)
